done all san pham

--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -37,10 +37,22 @@
               th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
     </th>
 
+    <th th:fragment="products_link(fieldProducts, columnLabel)">
+        <a style="text-decoration: none; color: black"
+           th:href="@{'/admin/products/page/' + ${currentPage} + '?sortField=' + ${fieldProducts} + '&sortDir=' + ${sortField != fieldProducts ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
+            [[${columnLabel}]]
+        </a>
+        <span th:if="${sortField == fieldProducts}" style="text-decoration: none; color: black"
+              th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+    </th>
     <!-- fragment cho phân trang-->
     <a th:fragment="pagecategory_link(pageNum, label)"
        class="page-link"
        th:href="@{'/admin/categories/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
+
+    <a th:fragment="pageproduct_link(pageNum, label)"
+       class="page-link"
+       th:href="@{'/admin/products/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
 
    </body>
 </html>
