--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -46,6 +46,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Dạnh mục
                     </a>
+                    <a class="nav-link collapsed" id="products" th:href="@{/admin/products}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Sản phẩm
+                    </a>
                 </div>
             </div>
         </nav>
