--- a/src/main/resources/templates/admin/errorlogin.html
+++ b/src/main/resources/templates/admin/errorlogin.html
@@ -16,13 +16,13 @@
 <div class="container-fluid text-center">
 
     <div>
-        <img style="margin-top: 20px" th:src="@{/images/5SAdminBig.png}">
+        <img style="margin-top: 20px" th:src="@{}">
     </div>
     <h2>Bạn đã nhập sai mật khẩu , vui lòng bấm vào  nút dưới đây để quay lại trang đăng nhập</h2>
     <button type="button" onclick="redirectToLoginAdmin()">Quay lại trang đăng nhập</button>
 
     <div class="text-center">
-        <p>5S Watch Control Pannel - copyright &copy; 5S</p>
+        <p></p>
     </div>
 
 </div>
