--- a/src/main/resources/templates/admin/cautruckhuy/cautruckhuy.html
+++ b/src/main/resources/templates/admin/cautruckhuy/cautruckhuy.html
@@ -66,10 +66,10 @@
                 </div>
 
                 <div class="text-center m-1" th:if="${totalItem > 0}">
-                    <span>Hiển thị Vật Liệu # [[${startCount}]] to [[${endCount}]] of [[${totalItem}]] </span>
+                    <span>Hiển thị trúc khuy # [[${startCount}]] to [[${endCount}]] of [[${totalItem}]] </span>
                 </div>
                 <div class="text-center m-1" th:unless="${totalItem > 0}">
-                    <span>Không có Vật Liệu trang này</span>
+                    <span>Không có cấu trúc khuy trang này</span>
                 </div>
 
                 <div th:if="${totalPages > 1}">
