--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -54,6 +54,9 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Cấu trúc khuy
                     </a>
+                    <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Xẻ tà</a>
                 </div>
             </div>
         </nav>
