--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -54,6 +54,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Cấu trúc khuy
                     </a>
+                    <a class="nav-link collapsed" id="materials" th:href="@{/admin/chatlieu}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Chất Liệu
+                    </a>
                 </div>
             </div>
         </nav>
