--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -59,6 +59,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Cấu trúc khuy
                     </a>
+                    <a class="nav-link collapsed" id="colors" th:href="@{/admin/colors}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Màu sắc
+                    </a>
                 </div>
             </div>
         </nav>
