--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -62,6 +62,9 @@
                     <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Xẻ tà</a>
+                    <a class="nav-link collapsed" id="" th:href="@{/admin/design}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Họa tiết</a>
                 </div>
             </div>
         </nav>
