--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -48,46 +48,7 @@
     <span th:if="${sortField == fieldProducts}" style="text-decoration: none; color: black"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
-<!-- fragment cho phân trang-->
-<a th:fragment="pagecategory_link(pageNum, label)"
-   class="page-link"
-   th:href="@{'/admin/categories/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
-    [[${label}]]</a>
 
-<a th:fragment="pageproduct_link(pageNum, label)"
-   class="page-link"
-   th:href="@{'/admin/products/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
-    [[${label}]]</a>
-<a th:fragment="mausac_link(pageNum, label)"
-   class="page-link"
-   th:href="@{'/admin/xeta/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
-<a th:fragment="xeta_link(pageNum, label)"
-   class="page-link"
-   th:href="@{'/admin/colors/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
-
-
-
-
-=======
-
-<!-- fragment cho navigation-->
-<th th:fragment="danhmuc_link(fieldDanhMuc, columnLabel)">
-    <a style="text-decoration: none; color: black"
-       th:href="@{'/admin/categories/page/' + ${currentPage} + '?sortField=' + ${fieldDanhMuc} + '&sortDir=' + ${sortField != fieldDanhMuc ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
-        [[${columnLabel}]]
-    </a>
-    <span th:if="${sortField == fieldDanhMuc}" style="text-decoration: none; color: black"
-          th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-</th>
-
-<th th:fragment="products_link(fieldProducts, columnLabel)">
-    <a style="text-decoration: none; color: black"
-       th:href="@{'/admin/products/page/' + ${currentPage} + '?sortField=' + ${fieldProducts} + '&sortDir=' + ${sortField != fieldProducts ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
-        [[${columnLabel}]]
-    </a>
-    <span th:if="${sortField == fieldProducts}" style="text-decoration: none; color: black"
-          th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-</th>
 <th th:fragment="column_link(fieldName, columnLabel)">
     <a style="text-decoration: none; color: black"
        th:href="@{'/admin/users/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' + ${sortField != fieldName ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
@@ -96,16 +57,12 @@
     <span th:if="${sortField == fieldName}" style="text-decoration: none; color: black"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
+
 <th th:fragment="cautruckhuy_link(fieldCauTrucKhuy, columnLabel)">
     <a style="text-decoration: none; color: black"
        th:href="@{'/admin/cautruckhuy/page/' + ${currentPage} + '?sortField=' + ${fieldCauTrucKhuy} + '&sortDir=' + ${sortField != fieldCauTrucKhuy ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
         [[${columnLabel}]]
     </a>
-
-    <span th:if="${sortField == fieldCauTrucKhuy}" style="text-decoration: none; color: black"
-          th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-</th>
-=======
     <span th:if="${sortField == fieldCauTrucKhuy}" style="text-decoration: none; color: black"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
@@ -114,20 +71,22 @@
    class="page-link"
    th:href="@{'/admin/categories/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
     [[${label}]]</a>
-
 <a th:fragment="pageproduct_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/products/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
     [[${label}]]</a>
-
-<a th:fragment="page_link(pageNum, label)"
-   class="page-link"
-   th:href="@{'/admin/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
-    [[${label}]]</a>
-<a th:fragment="page_link(pageNum, label)"
+<a th:fragment="cautruckhuy_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/cautruckhuy/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
     [[${label}]]</a>
+<a th:fragment="xeta_link(pageNum, label)"
+   class="page-link"
+   th:href="@{'/admin/xeta/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
+    [[${label}]]</a>
+<a th:fragment="page_link(pageNum, label)"
+   class="page-link"
+   th:href="@{'/admin/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
+
 
 </body>
 </html>
