--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -66,6 +66,10 @@
                     <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Xẻ tà</a>
+                    <a class="nav-link collapsed" id="size" th:href="@{/admin/sizes}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        kích cỡ
+                    </a>
                 </div>
             </div>
         </nav>
