--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -70,6 +70,9 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         kích cỡ
                     </a>
+                    <a class="nav-link collapsed" id="kieudet" th:href="@{/admin/kieudet}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Kiểu dệt</a>
                 </div>
             </div>
         </nav>
