--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -74,6 +74,14 @@
     <span th:if="${sortField == fieldKichCo}" style="text-decoration: none; color: black"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
+<th th:fragment="kieudet_link(fieldkieuDet, columnLabel)">
+    <a style="text-decoration: none; color: black"
+       th:href="@{'/admin/kieudet/page/' + ${currentPage} + '?sortField=' + ${fieldkieuDet} + '&sortDir=' + ${sortField != fieldkieuDet ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
+        [[${columnLabel}]]
+    </a>
+    <span th:if="${sortField == fieldkieuDet}" style="text-decoration: none; color: black"
+          th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+</th>
 <!-- fragment cho phân trang-->
 <a th:fragment="pagecategory_link(pageNum, label)"
    class="page-link"
@@ -101,6 +109,9 @@
 <a th:fragment="pagesize_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/sizes/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
+<a th:fragment="kieudet_link(pageNum, label)"
+   class="page-link"
+   th:href="@{'/admin/kieudet/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
 
 </body>
 </html>
