--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -46,12 +46,12 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Dạnh mục
                     </a>
-                    <a class="nav-link collapsed" id="products" th:href="@{/admin/products}" >
+                    <a class="nav-link collapsed" id="products" th:href="@{/admin/products}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Sản phẩm
                     </a>
 
-                    <a class="nav-link collapsed" id="users" th:href="@{/admin/users}" >
+                    <a class="nav-link collapsed" id="users" th:href="@{/admin/users}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Nhân viên
                     </a>
@@ -73,6 +73,10 @@
                     <a class="nav-link collapsed" id="kieudet" th:href="@{/admin/kieudet}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Kiểu dệt</a>
+                    <a class="nav-link collapsed" id="kieutui" th:href="@{/admin/kieutui}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        kiểu túi
+                    </a>
                 </div>
             </div>
         </nav>
