--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -62,6 +62,10 @@
                     <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Xẻ tà</a>
+                    <a class="nav-link collapsed" id="discounts" th:href="@{/admin/discounts}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Khuyến mại
+                    </a>
                 </div>
             </div>
         </nav>
