--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -61,7 +61,13 @@
                     </a>
                     <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Xẻ tà</a>
+                        Xẻ tà
+                    </a>
+
+                    <a class="nav-link collapsed" id="loplot" th:href="@{/admin/loplot}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Lớp Lót
+                    </a>
                 </div>
             </div>
         </nav>
