--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -105,10 +105,23 @@
     <span th:if="${sortField == fieldCauTrucKhuy}" style="text-decoration: none; color: black"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
-=======
-    <span th:if="${sortField == fieldCauTrucKhuy}" style="text-decoration: none; color: black"
+
+
+<th th:fragment="loplot_link(fieldLopLot, columnLabel)">
+    <a style="text-decoration: none; color: black"
+       th:href="@{'/admin/loplot/page/' + ${currentPage} + '?sortField=' + ${fieldLopLot} + '&sortDir=' + ${sortField != fieldLopLot ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
+        [[${columnLabel}]]
+    </a>
+    <span th:if="${sortField == fieldLopLot}" style="text-decoration: none; color: black"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
+
+<!--<th>-->
+<!--<span th:if="${sortField == fieldCauTrucKhuy}" style="text-decoration: none; color: black"-->
+<!--          th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>-->
+<!--</th>-->
+
+
 <!-- fragment cho phân trang-->
 <a th:fragment="pagecategory_link(pageNum, label)"
    class="page-link"
@@ -119,7 +132,9 @@
    class="page-link"
    th:href="@{'/admin/products/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
     [[${label}]]</a>
-
+<a th:fragment="pagematerial_link(pageNum, label)"
+   class="page-link"
+   th:href="@{'/admin/loplot/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
 <a th:fragment="page_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
