update form khuyen mai

--- a/src/main/resources/templates/admin/khuyenmai/discounts_form.html
+++ b/src/main/resources/templates/admin/khuyenmai/discounts_form.html
@@ -76,7 +76,6 @@
     </form>
 
         </main>
-        <div th:replace="admin/fragment/fragments::footer"></div>
     </div>
 </div>
 
@@ -154,6 +153,7 @@
         var params = {
             maKhuyenMai: maKhuyenMai,
             maKhuyenMaiBanDau: maKhuyenMaiBanDau,
+            khuyenMaiName: khuyenMaiName,
             _csrf: csrfValue
         };
 
